fixed compilation changes